syntax = "proto3";

option csharp_namespace = "Scribbly.Cubby.Proto";

package cache;

service CacheService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Put (PutRequest) returns (PutResponse);
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bool found = 1;
  bytes value = 2;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message PutResponse {
}
